--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 .container {
     background-color: #c00025;
     width: 100%;
@@ -5,6 +7,7 @@
     border-radius: 15px;
     border: 2px solid grey;
     padding-bottom: 25px;
+    height: 600px;
 }
 .display {
     margin-top: 25px;
@@ -20,3 +23,85 @@
     padding-right: 8%;
     font-size: 5.0rem;
   }
+
+.App{
+   padding-left: 10px; 
+}
+.calcBtn{
+    margin-top: 20px;
+    margin-left: 10px;
+    display: flex;
+    /* border: green 3px solid; */
+    width: 89%;
+    height: 100%;
+}
+
+.opBtn div{
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+    width: 100%;
+    height: 100%;
+    
+}
+
+.opBtn div button{
+    display: block;
+    margin-bottom: 10%;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    background-color: #63b4e0;
+    color: white;
+    font-size: 25px;
+    
+
+}
+
+.specBtn div{
+    display: flex;
+    /* border: green 3px solid; */
+}
+
+.specBtn div button{
+    display: block;
+    margin-bottom: 1%;
+    margin-right: 10%;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    background-color: #3362ab;
+    color: white;
+    font-size: 25px;
+
+}
+
+.numBtn div{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    /* //border: green 3px solid; */
+}
+
+.numBtn div button{
+    display: block;
+    margin-bottom: 3%;
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    background-color: #1d3d74;
+    color: white;
+    font-size: 25px;
+    margin-right: 10%;
+
+}
+
+.btn{
+    width: 100%;
+    
+}
+
+.numBtn div .bigButton{
+    width: 190px;
+    border-radius: 25px;
+}
